2007-04-26  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/pdb/display.pdb (diplay_is_valid)
	* tools/pdbgen/pdb/drawable.pdb (drawable_is_valid)
	* tools/pdbgen/pdb/image.pdb (image_is_valid)
	* tools/pdbgen/pdb/vectors.pdb (vectors_is_valid): it's the
	argument flag "no_success" which turns off validation, not
	"no_validate" (how obvious). Also fixed drawable and vectors
	procedures to check for !gimp_item_is_removed() instead of
	gimp_item_is_attached() (a newly created item is unattached
	but valid).

	* app/pdb/display_cmds.c
	* app/pdb/drawable_cmds.c
	* app/pdb/image_cmds.c
	* app/pdb/vectors_cmds.c: regenerated.

2007-04-26  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/pdb/pattern.pdb
	* tools/pdbgen/pdb/gradients.pdb
	* tools/pdbgen/pdb/brush_select.pdb
	* tools/pdbgen/pdb/context.pdb
	* tools/pdbgen/pdb/gradient.pdb
	* tools/pdbgen/pdb/palette.pdb
	* tools/pdbgen/pdb/procedural_db.pdb
	* tools/pdbgen/pdb/brushes.pdb
	* tools/pdbgen/pdb/palettes.pdb
	* tools/pdbgen/pdb/drawable.pdb
	* tools/pdbgen/pdb/brush.pdb
	* tools/pdbgen/pdb/gradient_select.pdb: some argument cleanup: use
	"=> 1" instead of "=> '1'" for setting argument flags, also made
	argument property order consistent so flags come before "desc".
	Doesn't affect generated code.

2007-04-26  Sven Neumann  <sven@gimp.org>

	* libgimp/gimp.c: document the image_types parameter (bug #326988).

2007-04-26  Sven Neumann  <sven@gimp.org>

	* app/paint-funcs/paint-funcs.c (gaussian_blur_region)
	* plug-ins/common/blur.c (blur)
	* plug-ins/common/gauss.c (do_encoded_lre) (do_full_lre): reduce
	rounding errors.

	* plug-ins/common/checkerboard.c (checkerboard_dialog): layout
	improvements.

2007-04-26  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/tiff-save.c: disabled the layer offsets saving
	code. This can be re-enabled in 2.6, when the load plug-in is
	patched to support these saved offsets.

	* plug-ins/common/tiff-load.c: marked the code for the above
	with a TODO comment.
