@@ -704,9 +704,9 @@ HELP
 	  desc => 'Use the reverse gradient' },
 	{ name => 'supersample', type => 'boolean',
 	  desc => 'Do adaptive supersampling' },
-	{ name => 'max_depth', type => '1 <= int32 <= 9', no_success => 1,
+	{ name => 'max_depth', type => '1 <= int32 <= 9', no_validate => 1,
 	  desc => 'Maximum recursion levels for supersampling' },
-	{ name => 'threshold', type => '0 <= float <= 4', no_success => 1,
+	{ name => 'threshold', type => '0 <= float <= 4', no_validate => 1,
 	  desc => 'Supersampling threshold' },
 	{ name => 'dither', type => 'boolean',
 	  desc => 'Use dithering to reduce banding' },
