@@ -143,7 +143,7 @@ HELP
     @inargs = (
 	{ name => 'image', type => 'image',
 	  desc => 'The image' },
-	{ name => 'guide', type => 'guide', no_success => 1,
+	{ name => 'guide', type => 'guide', no_validate => 1,
 	  desc => 'The ID of the current guide (0 if first invocation)' }
     );
 
