@@ -573,7 +573,7 @@ sub path_import {
     @inargs = (
 	{ name => 'image', type => 'image',
 	  desc => 'The image' },
-	{ name => 'filename', type => 'string', no_validate => 1,
+	{ name => 'filename', type => 'string', allow_non_utf8 => 1,
 	  desc => 'The name of the SVG file to import.' },
 	{ name => 'merge', type => 'boolean',
 	  desc => 'Merge paths into a single vectors object.' },
