@@ -167,21 +167,21 @@ sub text {
           desc => 'The size of text in either pixels or points' },
         { name => 'size_type', type => 'enum GimpSizeType',
           desc => 'The units of specified size' },
-        { name => 'foundry', type => 'string', no_validate => 1,
+        { name => 'foundry', type => 'string', allow_non_utf8 => 1,
           desc => 'The font foundry' },
-        { name => 'family', type => 'string', no_validate => 1,
+        { name => 'family', type => 'string', allow_non_utf8 => 1,
           desc => 'The font family' },
-        { name => 'weight', type => 'string', no_validate => 1,
+        { name => 'weight', type => 'string', allow_non_utf8 => 1,
           desc => 'The font weight' },
-        { name => 'slant', type => 'string', no_validate => 1,
+        { name => 'slant', type => 'string', allow_non_utf8 => 1,
           desc => 'The font slant' },
-        { name => 'set_width', type => 'string', no_validate => 1,
+        { name => 'set_width', type => 'string', allow_non_utf8 => 1,
           desc => 'The font set-width' },
-        { name => 'spacing', type => 'string', no_validate => 1,
+        { name => 'spacing', type => 'string', allow_non_utf8 => 1,
           desc => 'The font spacing' },
-        { name => 'registry', type => 'string', no_validate => 1,
+        { name => 'registry', type => 'string', allow_non_utf8 => 1,
           desc => 'The font registry' },
-        { name => 'encoding', type => 'string', no_validate => 1,
+        { name => 'encoding', type => 'string', allow_non_utf8 => 1,
           desc => 'The font encoding' }
     );
 
@@ -221,21 +221,21 @@ sub text_get_extents {
           desc => 'The size of text in either pixels or points' },
         { name => 'size_type', type => 'enum GimpSizeType',
           desc => 'The units of specified size' },
-        { name => 'foundry', type => 'string', no_validate => 1,
+        { name => 'foundry', type => 'string', allow_non_utf8 => 1,
           desc => 'The font foundry' },
-        { name => 'family', type => 'string', no_validate => 1,
+        { name => 'family', type => 'string', allow_non_utf8 => 1,
           desc => 'The font family' },
-        { name => 'weight', type => 'string', no_validate => 1,
+        { name => 'weight', type => 'string', allow_non_utf8 => 1,
           desc => 'The font weight' },
-        { name => 'slant', type => 'string', no_validate => 1,
+        { name => 'slant', type => 'string', allow_non_utf8 => 1,
           desc => 'The font slant' },
-        { name => 'set_width', type => 'string', no_validate => 1,
+        { name => 'set_width', type => 'string', allow_non_utf8 => 1,
           desc => 'The font set-width' },
-        { name => 'spacing', type => 'string', no_validate => 1,
+        { name => 'spacing', type => 'string', allow_non_utf8 => 1,
           desc => 'The font spacing' },
-        { name => 'registry', type => 'string', no_validate => 1,
+        { name => 'registry', type => 'string', allow_non_utf8 => 1,
           desc => 'The font registry' },
-        { name => 'encoding', type => 'string', no_validate => 1,
+        { name => 'encoding', type => 'string', allow_non_utf8 => 1,
           desc => 'The font encoding' }
     );
 
